--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@
  *
  ******************************************************************************/
 plugins {
+    id 'application'
     id 'com.jfrog.bintray' version '1.6'
     id 'java'
     id 'maven'
@@ -22,7 +23,7 @@ plugins {
     id 'com.github.johnrengelman.shadow' version '1.2.3'
 }
 
-version = '1.0'
+version = '1.1'
 description = "A project to create a stub/mock environment for testing ExecuteScript processors"
 group = 'mattyb149'
 status = 'RELEASE'
@@ -37,12 +38,17 @@ repositories {
 dependencies {
     compile 'org.apache.nifi:nifi-api:0.6.1'
     compile 'org.apache.nifi:nifi-mock:0.6.1'
+    testCompile 'junit:junit:4.12'
+    runtime 'commons-io:commons-io:2.4'
     runtime 'junit:junit:4.12'
     runtime 'org.slf4j:slf4j-log4j12:1.7.14'
 
     // script engine(s)
     runtime 'org.codehaus.groovy:groovy-all:2.4.6'
 }
+
+mainClassName = 'nifi.ScriptRunner'
+
 
 // custom tasks for creating source/javadoc jars
 task sourcesJar(type: Jar, dependsOn: classes) {
